--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,14 +1,8 @@
 body
 {
-<<<<<<< HEAD
-    color: red;
-    text-align: left;
-    font-family: Arial;
-=======
     color: #333;
     text-align: left;
     font-family: 'Arial';
->>>>>>> 5535652d7ed40ad07082511a6e585736c48e14fa
 }
 #container
 {
@@ -36,4 +30,10 @@ body
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0,8em;
+}
+
+#footer
+{
+    background-color: aquamarine;
+    padding: 0.5em;
 }
