--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,9 @@ body
 
 #footer
 {
+    color: azure;
+    text-align: center;
+    margin:0 auto;
     background-color: aquamarine;
     padding: 0.5em;
 }
